# homework_shu

./: .gitignore  CMakeLists.txt  Currency.cpp  README.md  cmakelists.txt  shape.cpp  window.cpp
251203/: Shape_inheritence.cpp
MyString/: MyString.cpp  MyString.h  main.cpp
Shape_with_other_functions/: Shape_inheritence.cpp
Vector/: Vector.cpp
Vector_String_template/: String.h  VECTOR.h  Vectorr.h  exceptions.h  main.cpp  test.cpp
friend/: friend.cpp
linked_list_template/: custom_linked_list_template.cpp
quadraticequations/: SolveEquations.cpp  SolveEquations.h  main.cpp
static_test/: Counter.cpp
time_class/: TIME.cpp  TIME.h  main.cpp
